# terminal-tree-rs

./: Cargo.toml  README.md
examples/: tree.rs
src/: clap.rs  lib.rs
